--- a/group3project/DESCRIPTION
+++ b/group3project/DESCRIPTION
@@ -27,10 +27,11 @@ Authors@R:
              role = c("aut", "cre"),
              email = "joyceyan@live.unc.edu"))
 Description: This package is created for analyzing car accidents data in North Carolina. In particular, it contains functions for fitting proportional odds models and applying random forest to identify predictors for severity of car accidents in NC.
-License: GPL-2
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
-Imports: gtools
+Imports: gtools,
+		 optimx
 Suggests: 
     testthat (>= 2.1.0)
